--- a/Web/Components/Pages/game.razor.css
+++ b/Web/Components/Pages/game.razor.css
@@ -32,9 +32,17 @@ h3 {
     background-color: #ddd;
 }
 
+
 .alert {
-    margin-top: 20px;
-    color: green;
-    font-weight: bold;
-    text-align: center;
+    background-color: #f8d7da;
+    color: #721c24;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #f5c6cb;
+    margin-bottom: 20px;
 }
+
+.alert p {
+    margin: 0;
+}
+
