--- a/Web/Components/Pages/Home.razor
+++ b/Web/Components/Pages/Home.razor
@@ -46,7 +46,7 @@
 <style>
 
 .lobby-container {
-    background: linear-gradient(to bottom right, #1e3c72, #2a5298);
+    background: linear-gradient(to bottom right, #b8bdc5, #2a5298);
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -158,7 +158,7 @@
 
 
 .btn-join {
-    background-color: #007bff;
+    background-color: #2991ff;
     color: white;
     font-size: 18px;
     padding: 10px;
@@ -170,7 +170,7 @@
 }
 
 .btn-join:hover {
-    background-color: #0056b3;
+    background-color: #c7d3e0;
     transform: scale(1.1);
 }
 </style>
