REQ Tests added (some of them) and fixed return to lobby button

--- a/Web/Components/Pages/Game.razor
+++ b/Web/Components/Pages/Game.razor
@@ -49,7 +49,7 @@
         @if (!string.IsNullOrEmpty(CurrentSession.CurrentGame.GameOverMessage))
         {
             <div class="alert alert-success">@CurrentSession.CurrentGame.GameOverMessage</div>
-            <a href="/lobby" class="btn-primary">Return to Lobby</a>
+            <a href="/" class="btn-primary">Return to Lobby</a>
         }
     }
 </div>
